<resources>
    <string name="app_name">GitHubUsers</string>
    <string name="id_label">Id - %s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_avatar">User avatar</string>
    <string name="username_label">Username: %s</string>
    <string name="name_label">Name: %s</string>
    <string name="email_label">Email: %s</string>
    <string name="organization_label">Organization: %s</string>
    <string name="following_count_label">Following count: %s</string>
    <string name="followers_count_label">Followers count: %s</string>
    <string name="created_label">Created: %s</string>
    <string name="connection_error_toast">Some connection error happened - try later, please</string>
</resources>